Refactoring: List Teammembers

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -210,6 +210,7 @@ en:
       cannot_delete: "Only admin or root may delete teams"
     teammembers:
       could_not_remove_last_teammember: "Could not remove last teammember"
+      could_not_remove_admin_from_private_team: "Could not remove admin from private team"
 
   confirm:
     delete: "Delete %{entry_class} %{entry_label} ?"
