--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -206,6 +206,7 @@ de:
       cannot_delete: "Nur admins und root können das Team löschen"
     teammembers:
       could_not_remove_last_teammember: "Der letzte Benutzer eines Teams kann nicht entfernt werden"
+      could_not_remove_admin_from_private_team: "Admins können nicht aus einem privaten Team gelöscht werden"
 
   helpers:
     label:
