--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -206,6 +206,7 @@ fr:
       cannot_delete: "Vous pouvez seulement supprimer une équipe si vous etes un root ou un admin."
     teammembers:
       could_not_remove_last_teammember: "Il n’est pas possible de supprimer le dernier utilisateur de l'équipe"
+      could_not_remove_admin_from_private_team: "Il n’est pas possible de supprimer un admin d'une équipe privée"
 
   helpers:
     label:
