--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -208,6 +208,7 @@ en:
       updated: "Team was successfully updated."
       deleted: "Team was successfully deleted"
       cannot_delete: "Only admin or root may delete teams"
+      no_member: "You are not member of this team"
     teammembers:
       could_not_remove_last_teammember: "Could not remove last teammember"
       could_not_remove_admin_from_private_team: "Could not remove admin from private team"
