--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -204,6 +204,7 @@ fr:
       updated: "L'équipe a été mise à jour avec succès."
       deleted: "L'équipe a été supprimé."
       cannot_delete: "Vous pouvez seulement supprimer une équipe si vous etes un root ou un admin."
+      no_member: "Vous n'êtes pas membre de cette équipe"
     teammembers:
       could_not_remove_last_teammember: "Il n’est pas possible de supprimer le dernier utilisateur de l'équipe"
       could_not_remove_admin_from_private_team: "Il n’est pas possible de supprimer un admin d'une équipe privée"
