styled teammember candidates

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -139,6 +139,8 @@ de:
       title: "Ein neues Teammitglied hinzufügen"
     confirm:
       delete: "%{entry_label} von diesem team entfernen ?"
+    show: "Mitglieder anzeigen"
+    hide: "Mitglieder verstecken"
 
   teams:
     title: "Teams"
