Refactoring users controller

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -174,8 +174,14 @@ de:
         resetpassword:
           success: "Das Passwort wurde erfolgreich gesetzt"
           required: "Das Passwort darf nicht leer sein"
+          not_root: "Das root Passwort kann nicht zurückgesetzt werden"
       users:
         created: "Der neue Benutzer wurde erfolgreich erstellt."
+        destroy:
+          own_user: "Eigener Benutzer kann nicht gelöscht werden"
+          root: "Root kann nicht gelöscht werden"
+        update:
+          root: "Root kann nicht aktualisiert werden"
     accounts:
       created: "Der neue Account wurde erfolgreich erstellt."
       updated: "Der Account wurde erfolgreich bearbeitet."
