--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -193,6 +193,7 @@ en:
       updated: "Group was successfully updated."
     items:
       uploaded: "File was successfully uploaded."
+      uploaded_size_to_high: "The file is too big to upload. (max. 10MB)"
     logins:
       welcome: "Welcome to Cryptopus, first you have to create a new Root account. Please enter a new password"
       auth_failed: "Authentication failed! Enter a correct username and password."
