denied update ldap user, fixed unlock root bug, switched user list to default style

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -182,6 +182,7 @@ de:
           root: "Root kann nicht gelöscht werden"
         update:
           root: "Root kann nicht aktualisiert werden"
+          ldap: "Ldap User kann nicht aktualisiert werden"
     accounts:
       created: "Der neue Account wurde erfolgreich erstellt."
       updated: "Der Account wurde erfolgreich bearbeitet."
