--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -87,8 +87,9 @@ en:
       edit:
         title: "Editing user"
         reset_password: "Reset password"
-        create_admin: "Give admin-rights"
-        remove_admin: "Take admin-rights"
+        create_admin: "Empower user"
+        admin_hint: "Admin-Rights"
+        remove_admin: "Disempower user"
       index:
         title: "List of all Cryptopus users"
         username: "Username"
