--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -84,8 +84,9 @@ fr:
       edit:
         title: "Modifier l'utilisatuer"
         reset_password: "Réinitialiser mot de passe"
-        create_admin: "surajouter les droits d' administrateur"
-        remove_admin: "enlever les droits d' administrateur"
+        create_admin: "autoriser l'ustilisateur"
+        admin_hint: "droits d'administrateur"
+        remove_admin: "avilir l'utilisateur"
       index:
         title: "La Liste de toutes les utilisateurs"
         username: "Nom d'utilisateur"
