Button and flashes for empower/disempower function

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -257,6 +257,8 @@ de:
 
   confirm:
     delete: "%{entry_class} %{entry_label} löschen?"
+    change_admin: "Admin-Rechte geben/entziehen?"
+
 
 #Validation Errors
   activerecord:
