added confirm message for em/disempower

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -101,6 +101,9 @@ en:
         unlock: "Unlock"
       new:
         title: "New user"
+      confirm:
+        empower: "Would you like to empower this user?"
+        disempower: "Would you like to disempower this user?"
 
   groups:
     index_menu:
@@ -186,8 +189,6 @@ en:
           not_root: "Could not reset roots password"
       users:
         created: "Successfully created a new user."
-        empowerd: "User now has Admin-Rights"
-        disempowerd: "User lost his Admin-Rights"
         destroy:
           own_user: "You can't delete your-self"
           root: "Root cannot be deleted"
