--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -268,6 +268,18 @@ de:
         body: ''
         header: ''
       models:
+        items:
+          attributes:
+            filename:
+              taken: 'Filename ist bereits vergeben'
+        account:
+          attributes:
+            accountname:
+              taken: 'ist bereits vergeben'
+        group:
+          attributes:
+            name:
+              taken: 'ist bereits vergeben'
         user:
           attributes:
             username:
@@ -300,7 +312,7 @@ de:
         other: mehr als %{count} Jahre
       x_days:
         one: ein Tag
-        other: "%{count} Tage"
+        other: "%{count} Tagen"
       x_minutes:
         one: eine Minute
         other: "%{count} Minuten"
