--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -268,6 +268,16 @@ fr:
         body: ''
         header: ''
       models:
+        account:
+          attributes:
+            accountname:
+              blank: 'ne peut pas être vide'
+              taken: 'est déjà pris'
+        group:
+          attributes:
+            name:
+              blank: 'ne peut pas être vide'
+              taken: 'est déjà pris'
         user:
           attributes:
             username:
