--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -204,7 +204,7 @@ en:
       uploaded: "File was successfully uploaded."
       uploaded_size_to_high: "The file is too big to upload. (max. 10MB)"
       uploaded_filename_is_empty: "The file has to be named"
-      uploaded_no_file: "No file was uploaded"
+      uploaded_file_inexistent: "File is inexistent"
     logins:
       welcome: "Welcome to Cryptopus, first you have to create a new Root account. Please enter a new password"
       auth_failed: "Authentication failed! Enter a correct username and password."
