changed team fabricator, delete user with last teammemeber #17022

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -98,6 +98,8 @@ de:
         action: "Aktion"
         locked: "Gesperrte Benutzer"
         unlock: "Entsperren"
+      index_teams:
+        title: "Teams in welchen der zu löschende User der letzte Team Member ist"
       new:
         title: "Neuer Benutzer"
 
@@ -261,6 +263,7 @@ de:
   confirm:
     delete: "%{entry_class} %{entry_label} löschen?"
     change_admin: "Admin-Rechte geben/entziehen?"
+    deleteWithTeams: "Lösche alle Teams in den %{username} der letze Team Member ist"
 
 
 #Validation Errors
