--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -99,8 +99,9 @@ en:
         action: "Action"
         locked: "Locked users"
         unlock: "Unlock"
-      index_teams:
-        title: "Teams where user to delete is the last teammember"
+      index_soloteams:
+        message: "The following Teams will be deleted because the user is the last member of this team."
+        title: "Teams"
       new:
         title: "New user"
 
