revised: Delete user with last teammembers teams - #17022

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -98,7 +98,7 @@ de:
         action: "Aktion"
         locked: "Gesperrte Benutzer"
         unlock: "Entsperren"
-      index_soloteams:
+      soloteams:
         message: "Folgende Teams in denen der zu löschende User der letzte Member ist müssen gelöscht werden."
         title: "Teams"
       new:
