--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -236,7 +236,7 @@ de:
       updated: "Das Team wurde erfolgreich angepasst."
       deleted: "Das Team wurde erfolgreich gelöscht"
       cannot_delete: "Nur admins können das Team löschen"
-      no_member: "Sie sind nicht Mitglied dieses Team"
+      no_member: "Sie sind nicht Mitglied dieses Teams"
     teammembers:
       could_not_remove_last_teammember: "Der letzte Benutzer eines Teams kann nicht entfernt werden"
       could_not_remove_admin_from_private_team: "Admins können nicht aus einem privaten Team gelöscht werden"
